@@ -24,6 +24,7 @@ my $builder = Module::Build->new(
       'Term::ANSIColor' => 0,
       'File::Find' => 0,
       'Cwd' => 0,
+      'PPI' => 0,
    },
    configure_requires => {
       'Module::Build' => 0,
