@@ -28,6 +28,7 @@ DEPENDENCIES
    Term::ANSIColor
    File::Find
    Cwd
+   PPI
 
 COPYRIGHT AND LICENSE
 
